--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,17 @@
-.content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: calc(100vh - 100px);
-    text-align: center;
-  }
-
+.app-container {
+    max-width: 100vw;
+    max-height: 100vh;
+}
   .horizontal-list {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    /*bottom: 20px;*/
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
     display: flex;
     justify-content: center;
     padding: 0;
     list-style-type: none;
+    align-self: flex-end;
+    background:pink;
   }
 
   .list-group-item {
@@ -34,4 +30,14 @@
     background-color: #007bff;
     color: white;
     border-color: #007bff;
+  }
+
+  .image {
+    max-width: 100%;      /* Ensures image doesn't exceed container width */
+    max-height: 400px;    /* Prevents image from becoming too tall */
+    object-fit: contain;  /* Maintains aspect ratio */
+  }
+
+  .image-container {
+    margin-right: 20px;
   }
