--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,11 @@
-.app-container {
-    max-width: 100vw;
-    max-height: 100vh;
+.horizontal-list {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding-bottom: 20px;
 }
-  .horizontal-list {
-    /*bottom: 20px;*/
-    /*left: 50%;*/
-    /*transform: translateX(-50%);*/
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    list-style-type: none;
-    align-self: flex-end;
-    background:pink;
-  }
 
   .list-group-item {
     margin: 0 10px;
@@ -33,8 +26,8 @@
   }
 
   .image {
-    max-width: 100%;      /* Ensures image doesn't exceed container width */
-    max-height: 400px;    /* Prevents image from becoming too tall */
+    width: 80%;      /* Ensures image doesn't exceed container width */
+    height: 90px;    /* Prevents image from becoming too tall */
     object-fit: contain;  /* Maintains aspect ratio */
   }
 
